--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         </div>
     </div>
     <script>
-        const newsApiKey = '53635c58e90d4221a35e3755bb9111d7';
+        const newsApiKey = ''; //replace news api key here
         let trendingTopics = [];
         function toggleMenu() {
             const mobileMenu = document.getElementById('mobileMenu');
